Inicio de Proyecto

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{!-- {{welcome-page}} --}}
-{{!-- Feel free to remove this! --}}
+<div>
+  <h2 class="ui center aligned icon header">
+    <i class="circular users icon"></i>
+    <center><h1 >Crea tu evento</h1></center>
+  </h2>
+</div>
 
+<hr><br>
 {{outlet}}
-<h2 class="ui center aligned icon header">
-  <i class="circular users icon"></i>
-  Friends
-</h2>
-
-<button name="button">c:</button>
