--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,32 @@
-<div>
-  <h2 class="ui center aligned icon header">
-    <i class="circular users icon"></i>
-    <center><h1 >Crea tu evento</h1></center>
-  </h2>
+<div  class="card-panel teal lighten-2">
+  <h1 class="ui center aligned icon header" style="height: 100%;">
+    <!-- <i class="circular user icon"></i> -->
+    <center><h1 style="color: white;">Crea tu evento</h1></center>
+  </h1>
 </div>
 
-<hr><br>
 {{outlet}}
+
+<footer class="page-footer">
+       <div class="container">
+         <div class="row">
+           <div class="col l6 s12">
+             <h5 class="white-text">Footer Content</h5>
+             <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+           </div>
+           <div class="col l4 offset-l2 s12">
+             <h5 class="white-text">Links</h5>
+             <ul>
+               <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+               <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+             </ul>
+           </div>
+         </div>
+       </div>
+       <div class="footer-copyright">
+         <div class="container">
+         © 2014 Copyright Text
+         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+         </div>
+       </div>
+</footer>
